opam-version: "2.0"
authors: "Roberto Di Cosmo <roberto@dicosmo.org>"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/setcore"
dev-repo: "git+https://github.com/UnixJunkie/setcore.git"
bug-reports: "https://github.com/UnixJunkie/setcore/issues"
build: [
  ["autoconf"]
  ["autoheader"]
  ["./configure"]
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "conf-autoconf" {build}
  "ocaml"
  "dune" {>= "1.11.0"}
]
synopsis: "Pin current process to given core number"
description: "
The module installed is called Cpu; in order to not conflic
with the Setcore module that is installed by parmap.

This library can also get the number of CPU cores online.
"
#url {
#  src: "https://github.com/UnixJunkie/setcore/archive/vXXX.tar.gz"
#  checksum: "md5=YYY"
#}
