opam-version: "2.0"
authors: "Roberto Di Cosmo <roberto@dicosmo.org>"
maintainer: "unixjunkie@sdf.org"
version: "0.0.1"
homepage: "https://github.com/UnixJunkie/setcore"
dev-repo: "git+https://github.com/UnixJunkie/setcore.git"
bug-reports: "https://github.com/UnixJunkie/setcore/issues"
build: [
  ["aclocal" "-I" "m4"]
  ["autoconf"]
  ["autoheader"]
  ["./configure"] 
  ["dune" "build" "-p" name]
]
depends: ["ocaml"]
synopsis: "Pin current process to given core number"
